testsuite/tests/polykinds/T14561.stderr

T14561.hs:12:9: error:
    Cannot use function with levity-polymorphic arguments:
      unsafeCoerce# :: a -> a
    (Note that levity-polymorphic primops such as 'coerce' and unboxed tuples
    are eta-expanded internally because they must occur fully saturated.
    Use -fprint-typechecker-elaboration to display the full expression.)
    Levity-polymorphic arguments: a :: TYPE r
